--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <h2>Zwyczaje związane ze Świętem Wszystkich Świętych:</h2>
     <ul>
        <h3> <li>Zapalanie zniczy i składanie kwiatów na grobach bliskich.</li>
-<img src="znicze-min.jpg" height="550" width="500">
+<img src="znicze.jpg" height="550" width="500">
         <li>Modlitwa za dusze zmarłych w kościołach i cmentarzach.</li>
 <img src="modlitwa.jpg" height="400" width="600">
         <li>Msze św. w intencji zmarłych.</li>
